fixed the error in heatmap popup but popup still isn't visible

--- a/clientside/src/scss/main.scss
+++ b/clientside/src/scss/main.scss
@@ -84,6 +84,18 @@
 				width: 80vw;
 				align-self: center;
 			}
+
+			.tooltip {
+				position: absolute;
+				margin: 8px;
+				padding: 4px;
+				background: rgba(0, 0, 0, 0.8);
+				color: #fff;
+				max-width: 300px;
+				font-size: 10px;
+				z-index: 9;
+				pointer-events: none;
+			  }
 		}
 	}
 	 
@@ -142,6 +154,7 @@
 		line-height: 1.2;
 		width: 200px;
 	  }
+	  
 	 // % protected region % [Add additional front-end style content here] end
  }
  
